Optimized Global code